# leanstack

./: .coderabbit.yaml  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  KNOWN_ISSUES.md  LICENSE  NOTICE  README.md  SECURITY.md  STATUS.md  TAURI_MOBILE_RESEARCH.md  cliff.toml  install.ps1  install.sh  install_onpush.ps1  mise.local.toml  mise.toml  opencode.json  proxy-spec.md  release-plz.toml  run_onpush.bat
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.codex-plugin/hooks/: hooks.json
.githooks/: pre-commit  prepare-commit-msg  reference-transaction
.github/: PR_BODY.md  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-merge.yml  cache-cleanup.yml  cargo-publish-init.yml  ci.yml  cla.yml  dependabot-automerge.yml  docker.yml  npm-publish.yml  opencode.yml  ppa-publish.yml  pr-title.yml  release-plz.yml  release.yml  require-review-for-others.yml  security-check.yml  vendored-file-warning.yml  winget.yml  zizmor.yml
.superpowers/sdd/: progress.md
assets/: banner.txt
aur/agentflare/: PKGBUILD
bucket/: agentflare.json
crates/agent-registry/: CHANGELOG.md  Cargo.toml
crates/agent-registry/src/: detect.rs  lib.rs  registry.rs
crates/agentflare-artifacts/: CHANGELOG.md  Cargo.toml
crates/agentflare-artifacts/src/: lib.rs  server.rs  store.rs  types.rs
crates/agentflare-backend/: CHANGELOG.md  Cargo.toml
crates/agentflare-backend/src/: asset.rs  claim.rs  comment.rs  db.rs  error.rs  events.rs  item.rs  label.rs  lib.rs  project.rs  schema.sql  state.rs  vent.rs  webhook.rs  workspace.rs
crates/agentflare-backend/src/migrations/: 0001_initial.sql  0003_asset_versioning.sql  0004_item_comments.sql  0005_items_fts.sql  0006_vents.sql
crates/agentflare-db-kit/: CHANGELOG.md  Cargo.toml
crates/agentflare-db-kit/src/: claim.rs  ids.rs  lib.rs  open.rs
crates/agentflare-jobs/: Cargo.toml
crates/agentflare-jobs/src/: lib.rs  queue.rs  supervisor.rs  types.rs  worker.rs
crates/agentflare-jobs/tests/: queue_test.rs
crates/agentflare-shim/: Cargo.toml
crates/agentflare-shim/src/: lib.rs  main.rs
crates/agentflare-store/: Cargo.toml
crates/agentflare-store/src/: blobs.rs  documents.rs  embed.rs  kv.rs  leases.rs  lib.rs  migrate.rs  migrations.rs  retrieval.rs
crates/agentflare-store/src/embedding_pipeline/: download.rs  mod.rs  model_registry.rs  pooling.rs  tokenizer.rs
crates/caveman/: CHANGELOG.md  Cargo.toml
crates/flare-code/: Cargo.toml
crates/flare-code/src/: config.rs  detect.rs  instructions.rs  lib.rs  platform.rs  skill-audit.md  skill-debt.md  skill-gain.md  skill-help.md  skill-no-hallucination.md  skill-playbook.md  skill-review.md  skill.md  state.rs  sub_skills.rs  switcher.rs
crates/flare-docs/: Cargo.toml
crates/flare-docs/src/: fetch.rs  lib.rs  rustdoc.rs  store.rs
crates/flare-git-core/: Cargo.toml
crates/flare-git-core/src/: audit.rs  branch.rs  classify.rs  doctor.rs  lib.rs  provenance.rs  scope.rs  shell.rs  snapshot.rs  worktree.rs
crates/flare-git-shim/: Cargo.toml
crates/flare-git-shim/src/: main.rs
crates/flare-git-shim/tests/: shim_test.rs
crates/flare-output/: Cargo.toml
crates/flare-output/src/: compress.rs  error.rs  frontmatter.rs  lib.rs  llm.rs  prompt.rs
crates/flare-proxy/: Cargo.toml
crates/flare-proxy/src/: forward.rs  heuristic.rs  lib.rs  providers.rs  shape_xlat.rs  think.rs
crates/flare-search-kit/: Cargo.toml
crates/flare-search-kit/src/: lib.rs
crates/flared/: Cargo.toml
crates/flared/src/: actions.rs  artifacts.rs  config.rs  daemon.rs  events.rs  http.rs  leases.rs  lib.rs  main.rs  model.rs  policy.rs  scanner.rs  service.rs
crates/flared/src/janitor/: lean_ctx.rs  mod.rs
crates/gateway-registry/: CHANGELOG.md  Cargo.toml
crates/gateway-registry/src/: audit.rs  backend.rs  circuit.rs  config.rs  db.rs  error.rs  lib.rs  mcp_http.rs  mcp_stdio.rs  redact.rs  registry.rs  registry_search.rs  sanitize.rs  search.rs  truncate.rs
crates/gateway-registry/tests/: gateway_audit_log.rs  mcp_http_call.rs  mcp_http_circuit_breaker.rs  mcp_http_discover.rs  mcp_stdio_call.rs  mcp_stdio_circuit_breaker.rs  mcp_stdio_discover.rs  mcp_stdio_reconnect.rs  mcp_stdio_timeout.rs  registry.rs
crates/gateway-registry/tests/fixtures/: fixture_server.rs
crates/gateway-registry/tests/support/: mod.rs
crates/ponytail/: CHANGELOG.md  Cargo.toml
crates/ponytail/src/: config.rs  instructions.rs  lib.rs  platform.rs  skill-audit.md  skill-help.md  skill-playbook.md  skill-review.md  skill.md  state.rs  sub_skills.rs  switcher.rs
crates/proxy-server/: Cargo.toml
crates/proxy-server/src/: config.rs  lib.rs  translate.rs
crates/skill-registry/: CHANGELOG.md  Cargo.toml
crates/skill-registry/src/: db.rs  frontmatter.rs  hub.rs  lib.rs  load.rs  pack.rs  search.rs  sources.rs
crates/skill-registry/tests/: golden_queries.rs
dashboard/web/: board.html  claims.html  cost.html  index.html  (+6 more)
docs/: api-sdk-reference.md  architecture-system-design.md  business-overview.md  data-model.md  deployment-and-operations.md  feature-agent-lifecycle-cli.md  feature-caam-auth-vault.md  product-overview.md  security.md  testing.md
scripts/: cleanup-branches.sh  loc-gate.sh  refresh-install.ps1  release-bump.sh  release-npm.sh  release-tag.sh
site/: .gitignore  README.md  package.json  wrangler.jsonc
src/: about.rs  agent_detect.rs  agent_install.rs  agent_launch.rs  agent_registry.rs  agents.rs  alias.rs  artifacts.rs  asset_store.rs  atomic_fs.rs  auth.rs  auth_crypt.rs  auth_db.rs  auth_runner.rs  banner.rs  build_time.rs  channels.rs  claims.rs  coaching.rs  compact.rs  components.rs  cost.rs  daemon.rs  daemon_autostart.rs  daemon_client.rs  db.rs  dev_vars.rs  engram-install.js  engram_install.rs  errors.rs  gateway_integrations.rs  gateway_secrets.rs  hook.rs  hook_redirect.rs  init.rs  jsonc.rs  main.rs  mcp_prompts.rs  mcp_server.rs  mise_install.rs  (+18 more)
tests/: auth_integration.rs  caveman_cli.rs  optimize_output_cli.rs
(+130 files in other folders)
