[package]
name = "agentflare"
version = "1.1.0"
edition = "2021"
description = "Optimize AI CLI agents for cost and performance."
license = "MIT"
repository = "https://github.com/getappz/agentflare"

[package.metadata.binstall]
bin-dir = "agentflare{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/agentflare-x86_64-unknown-linux-gnu.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/agentflare-aarch64-unknown-linux-gnu.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/agentflare-x86_64-apple-darwin.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/agentflare-aarch64-apple-darwin.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/agentflare-x86_64-pc-windows-msvc.zip"
pkg-fmt = "zip"

[[bin]]
name = "agentflare"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
rmcp = { version = "1.8.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std"] }
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = "2"
rusqlite = { version = "0.40", features = ["bundled"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
