[workspace]
members = ["crates/flare-code", "crates/agent-registry", "crates/skill-registry", "crates/gateway-registry", "crates/flare-output", "crates/agentflare-artifacts", "crates/agentflare-backend", "crates/agentflare-db-kit", "crates/flare-search-kit"]
resolver = "2"

[package]
name = "agentflare"
version = "1.3.1"
edition = "2024"
rust-version = "1.91"
description = "Run AI coding agents efficiently, and coordinate more than one of them."
license = "MIT"
repository = "https://github.com/getappz/agentflare"
publish = false

[package.metadata.binstall]
bin-dir = "agentflare{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/agentflare-x86_64-unknown-linux-gnu.tar.gz"

[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/agentflare-aarch64-unknown-linux-gnu.tar.gz"

[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/agentflare-x86_64-apple-darwin.tar.gz"

[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/agentflare-aarch64-apple-darwin.tar.gz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/agentflare-x86_64-pc-windows-msvc.zip"
pkg-fmt = "zip"

[[bin]]
name = "agentflare"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = "0.4"
rmcp = { version = "1.8.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt", "macros", "io-util", "io-std", "sync"] }
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.40", features = ["bundled"] }
rand = "0.8"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rpassword = "7"
cliclack = "0.3"
thiserror = "2"
eyre = "0.6"
color-eyre = "0.6"
flare-code = { package = "agentflare-flare-code", path = "crates/flare-code" }
agent-registry = { package = "agentflare-agent-registry", path = "crates/agent-registry" }
skill-registry = { package = "agentflare-skill-registry", path = "crates/skill-registry" }
gateway-registry = { package = "agentflare-gateway-registry", path = "crates/gateway-registry" }
flare-output = { package = "agentflare-flare-output", path = "crates/flare-output" }
regex = "1"
sysinfo = { version = "0.34", optional = true, default-features = false, features = ["system"] }
agentflare-artifacts = { path = "crates/agentflare-artifacts" }
agentflare-backend = { package = "agentflare-backend", path = "crates/agentflare-backend" }
db_kit = { package = "agentflare-db-kit", path = "crates/agentflare-db-kit" }
agent-detector = "0.2.1"
flare-search-kit = { path = "crates/flare-search-kit" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
process-tree = ["sysinfo"]
# Off by default, not part of released builds: syncs Claude Code's
# skillOverrides to suppress skill descriptions from the always-on listing.
# Measured to save ~900 tokens/turn of context-window space, but that's
# mostly cache-read traffic (cheap) — no confirmed $ savings yet.
skill-overrides-sync = []

[build-dependencies]
built = { version = "0.8", features = ["chrono"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile = "3"
pretty_assertions = "1"

[lints.rust]
unsafe_code = "warn"

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[profile.dev]
debug = 1

