[package]
name = "agentflare-artifacts"
version = "0.1.0"
edition = "2021"
description = "Live shareable artifact pages from AI agent sessions"
license = "MIT"

[dependencies]
similar = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
