[package]
name = "agentflare-artifacts"
version = "0.1.0"
edition = "2021"
description = "Live shareable artifact pages from AI agent sessions"
license = "Apache-2.0"
publish = false

[dependencies]
similar = "2"
nanoid = "0.5"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
