[package]
name = "agentflare-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"
description = "Universal agent backend: workspace/project/item schema + CRUD, ported from Plane's domain model."
publish = false

[dependencies]
db_kit = { package = "agentflare-db-kit", path = "../agentflare-db-kit" }
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v7"] }
thiserror = "2"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
url = "2"

[dev-dependencies]
tempfile = "3"
