[package]
name = "agentflare-jobs"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"
description = "Persistent background job queue for AI agent CLIs. SQLite-backed, typed jobs, process supervision with timeout/kill, worker pool. Leans on agentflare's existing rusqlite + db_kit infra — no fang dependency."
publish = false

[dependencies]
db_kit = { package = "agentflare-db-kit", path = "../agentflare-db-kit" }
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
