[package]
name = "agentflare-store"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"
description = "Local-first document, artifact, blob, and memory storage for AI agent CLIs. SQLite index + content-addressed files. Zero external infra."
publish = false

[dependencies]
db_kit = { package = "agentflare-db-kit", path = "../agentflare-db-kit" }
rusqlite = { version = "0.40", features = ["bundled"] }
rusqlite_migration = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1.5"
flate2 = "1"
thiserror = "2"
parking_lot = "0.12"
bytemuck = { version = "1", features = ["derive"] }
anyhow = { version = "1", optional = true }
dirs = { version = "6", optional = true }
tracing = { version = "0.1", optional = true }
ureq = { version = "2", features = ["json"], optional = true }
sha2 = { version = "0.10", optional = true }
ndarray = { version = "0.17", optional = true }
rayon = { version = "1", optional = true }
ort = { version = "=2.0.0-rc.12", optional = true, default-features = true, features = ["ndarray"] }

[features]
default = []
embeddings = ["dep:anyhow", "dep:dirs", "dep:tracing", "dep:ureq", "dep:sha2", "dep:ndarray", "dep:rayon", "dep:ort"]

[dev-dependencies]
tempfile = "3"
