[package]
name = "agentflare-flare-code"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Flare code minimalism — lazy senior dev mode for AI agents"
license = "MIT"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
sysinfo = { version = "0.34", optional = true, default-features = false, features = ["system"] }

[features]
default = []
process-tree = ["sysinfo"]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
