[package]
name = "agentflare-flare-output"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Flare output compressor — LLM-based prose compression with structural validation"
license = "MIT"
publish = false

[dependencies]
regex = "1"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
which = "6"
dirs = "6"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
