[package]
name = "flared"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Always-on cross-platform supervisor for AI-agent workload hygiene."
license = "MIT"
repository = "https://github.com/getappz/agentflare"

[[bin]]
name = "flared"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
eyre = "0.6"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
axum = "0.8"
kill_tree = { version = "0.2", features = ["blocking"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
