[package]
name = "agentflare-gateway-registry"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT"

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "sync", "macros", "io-util", "time"] }
rmcp = { version = "1.8.0", features = ["client", "transport-child-process", "server", "transport-io", "macros"] }
schemars = "1.0"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "warn"

[[bin]]
name = "gateway-fixture-server"
path = "tests/fixtures/fixture_server.rs"
