[package]
name = "agentflare-gateway-registry"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
description = "Gateway registry — intent-first discovery and execution across MCP servers"
license = "MIT"
repository = "https://github.com/getappz/agentflare"
publish = false

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "process", "sync", "macros", "io-util", "time", "net"] }
rmcp = { version = "1.8.0", features = ["client", "transport-child-process", "server", "transport-io", "macros", "transport-streamable-http-client-reqwest"] }
schemars = "1.0"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
regex = "1"
sha2 = "0.10"
flare-search-kit = { path = "../flare-search-kit" }
http = "1.4"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio"] }
tokio-util = "0.7"
rmcp = { version = "1.8.0", features = ["transport-streamable-http-server"] }

[lints.rust]
unsafe_code = "warn"

[[bin]]
name = "gateway-fixture-server"
path = "tests/fixtures/fixture_server.rs"
