[package]
name = "proxy-server"
version = "0.1.0"
edition = "2024"
description = "Embedded Anthropic Messages → OpenAI Chat Completions proxy with multi-backend failover"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
thiserror = { workspace = true }
