[package]
name = "agentflare-skill-registry"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
license = "MIT"
description = "Local SKILL.md registry: scan, BM25 search (SQLite FTS5), shadow-aware load."

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"   # frontmatter only; deprecated upstream but stable — replace if a maintained fork is adopted workspace-wide
regex = "1"
thiserror = "2"
dirs = "6"
agent-registry = { package = "agentflare-agent-registry", path = "../agent-registry", version = "0.1.0" }

[dev-dependencies]
tempfile = "3"
