[package]
name = "agentflare-skill-registry"
version = "0.1.1"
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0"
description = "Local SKILL.md registry: scan, BM25 search (SQLite FTS5), shadow-aware load."
publish = false

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"  # frontmatter only; serde_yml has an unsound RUSTSEC advisory (RUSTSEC-2025-0068) and is archived
regex = "1"
thiserror = "2"
dirs = "6"
flare-search-kit = { path = "../flare-search-kit" }
gateway-registry = { package = "agentflare-gateway-registry", path = "../gateway-registry" }

[dev-dependencies]
tempfile = "3"
